[gd_scene load_steps=7 format=3 uid="uid://bseomgyvupcke"]

[ext_resource type="Script" path="res://Scripts/projectile.gd" id="1_w1l6a"]
[ext_resource type="Texture2D" uid="uid://em0wvpv5jpl6" path="res://Art/stapler.png" id="2_4qfrk"]
[ext_resource type="Texture2D" uid="uid://qs1purdk0g70" path="res://Art/pencil (1).png" id="3_uwp2k"]
[ext_resource type="Texture2D" uid="uid://jmr0ngimtqfp" path="res://Art/pencil.png" id="4_vhxwd"]
[ext_resource type="Texture2D" uid="uid://bha0bl7xwklp1" path="res://Art/rubberpng.png" id="5_8ehq0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1n7m6"]
size = Vector2(2.5, 2.66667)

[node name="Projectile" type="CharacterBody2D" groups=["projectile"]]
z_index = 4
scale = Vector2(6, 6)
collision_layer = 524288
script = ExtResource("1_w1l6a")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Sprite1" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_4qfrk")

[node name="Sprite2" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_uwp2k")

[node name="Sprite3" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_vhxwd")

[node name="Sprite4" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_8ehq0")

[node name="Sprite5" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_4qfrk")

[node name="Area2D" type="Area2D" parent="." groups=["projectile"]]
collision_layer = 524294
collision_mask = 524294

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.2, 1.2)
shape = SubResource("RectangleShape2D_1n7m6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.0833333, -0.166667)
shape = SubResource("RectangleShape2D_1n7m6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
